kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: liscase
  labels:
    name: liscase
    environment: production
